<resources>
    <string name="app_name">Remind</string>
    <string name="action_settings">Settings</string>
    <string name="action_pays">Pays</string>
    <string name="radio_btn_history">History</string>
    <string name="radio_btn_today">Today</string>
    <string name="radio_btn_mine">Mine</string>

    <!-- add activity-->
    <string name="add_remind">Add Remind</string>
    <string name="add_remind_mouth_day">Remind MM DD:</string>
    <string name="add_remind_time">Remind Time:</string>
    <string name="add_remind_content">Remind Cycle:</string>
    <string name="add_remind_level">Remind Level:</string>
    <string name="add_week_monday">Monday</string>
    <string name="add_week_tuesday">Tuesday</string>
    <string name="add_week_wednesday">Wednesday</string>
    <string name="add_week_thursday">Thursday</string>
    <string name="add_week_friday">Friday</string>
    <string name="add_week_staurday">Saturday</string>
    <string name="add_week_sunday">Sunday</string>
    <string name="add_week_not_repeat">Not Repeat</string>
    <string name="history_title">History</string>
    <string name="history_right">Select</string>
    <string name="mine_title">Mine</string>
    <string name="mine_register_login_text">Login/Register</string>
    <string name="mine_about_us_text">About Us</string>
    <string name="mine_feedback_text">Feedback</string>
    <string name="mine_evaluation_encourage_text">EvaluationOfEncourage</string>
    <string name="mine_recommend_text">Recommend To Your Friends</string>

</resources>
