<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/mineTop"
            android:layout_width="match_parent"
            android:layout_height="48dp">

        <TextView
                android:id="@+id/mineTitle"
                android:text="@string/mine_title"
                android:textSize="@dimen/titleTextSize"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:textColor="@color/normal_text_color"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>


        <ImageView
                android:id="@+id/mineSettings"
                android:layout_marginRight="@dimen/fab_margin_left"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_mine_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </RelativeLayout>


    <LinearLayout
            android:id="@+id/mineIconLayout"
            app:layout_constraintTop_toBottomOf="@id/mineTop"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/mineIcon"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintTop_toBottomOf="@id/mineTop"
                android:src="@drawable/ic_mine_account_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/mineLogin"
                android:text="@string/mine_register_login_text"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
            android:id="@+id/mineAboutUs"
            android:layout_marginTop="@dimen/fab_margin_left"
            android:layout_marginBottom="@dimen/fab_margin_left"
            app:layout_constraintTop_toBottomOf="@id/mineIconLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <View
                android:background="@color/today_list_item_line_color"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

        <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="48dp">

            <ImageView
                    android:src="@drawable/ic_mine_about_us"
                    android:layout_marginLeft="@dimen/fab_margin_left"
                    android:layout_marginRight="@dimen/fab_margin_left"
                    android:layout_width="26dp"
                    android:layout_height="26dp"/>

            <TextView
                    android:text="@string/mine_about_us_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
            android:id="@+id/mineFeedback"
            app:layout_constraintTop_toBottomOf="@id/mineAboutUs"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <View
                android:background="@color/today_list_item_line_color"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

        <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="48dp">

            <ImageView
                    android:src="@drawable/ic_mine_about_us"
                    android:layout_marginLeft="@dimen/fab_margin_left"
                    android:layout_marginRight="@dimen/fab_margin_left"
                    android:layout_width="26dp"
                    android:layout_height="26dp"/>

            <TextView
                    android:text="@string/mine_feedback_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
            android:id="@+id/mineEvaluationOfEncourage"
            app:layout_constraintTop_toBottomOf="@id/mineFeedback"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <View
                android:background="@color/today_list_item_line_color"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

        <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="48dp">

            <ImageView
                    android:src="@drawable/ic_mine_about_us"
                    android:layout_marginLeft="@dimen/fab_margin_left"
                    android:layout_marginRight="@dimen/fab_margin_left"
                    android:layout_width="26dp"
                    android:layout_height="26dp"/>

            <TextView
                    android:text="@string/mine_evaluation_encourage_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
            android:id="@+id/mineRecommend"
            app:layout_constraintTop_toBottomOf="@id/mineEvaluationOfEncourage"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <View
                android:background="@color/today_list_item_line_color"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

        <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="48dp">

            <ImageView
                    android:src="@drawable/ic_mine_about_us"
                    android:layout_marginLeft="@dimen/fab_margin_left"
                    android:layout_marginRight="@dimen/fab_margin_left"
                    android:layout_width="26dp"
                    android:layout_height="26dp"/>

            <TextView
                    android:text="@string/mine_recommend_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <View
                android:background="@color/today_list_item_line_color"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>